# ada

./: .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/ada/: main.py
src/ada/api/: webhooks.py
src/ada/auth/: dependencies.py  jwt.py  middleware.py
src/ada/brains/structured/: executor.py  schema_store.py  sql_generator.py  summarizer.py
src/ada/brains/unstructured/: chunker.py  embeddings.py  qdrant.py  rag.py
src/ada/connectors/: base.py  confluence.py  github.py  intercom.py  jira.py  slack.py  tasks.py
src/ada/core/: config.py
src/ada/llm/: client.py  router.py
tests/: test_auth.py  test_connectors.py  test_health.py  test_llm_client.py  test_llm_router.py  test_structured_brain.py  test_unstructured_brain.py
